# retell-clone

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/skills/verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  pr-title.yml  release-please.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  schemas_extra.py  signature.py
backend/app/api/: agents.py  auth_google.py  batch_calls.py  calls.py  chat_agents.py  concurrency.py  dashboard.py  internal.py  knowledge_bases.py  llms.py  phone_numbers.py  voices.py
backend/app/services/: metrics.py  telephony.py
backend/scripts/: generate_voice_previews.py
backend/src/app/: models.py  schemas.py  security.py
backend/src/app/services/: inbound.py  webhooks.py
backend/src/architeq_api/: auth.py  config.py  ids.py  main.py  models.py  schemas.py  seed.py  sessions.py  voices.py
backend/src/architeq_api/api/: agents.py  auth_google.py  calls.py  chats.py  conversation_flows.py  dashboard.py  internal.py  knowledge_bases.py  llms.py  phone_numbers.py  voices.py
backend/src/architeq_api/services/: analysis.py  inbound.py  recordings.py  template_variables.py  webhooks.py
backend/src/arhiteq_api/: auth.py  config.py  db.py  main.py  models.py  schemas.py  schemas_extra.py  security.py  seed.py  sessions.py  voices.py
backend/src/arhiteq_api/api/: _deps.py  agents.py  auth_google.py  batch_calls.py  calls.py  chats.py  concurrency.py  conversation_flows.py  dashboard.py  internal.py  llms.py  phone_numbers.py
backend/src/arhiteq_api/services/: analysis.py  gemini.py  metrics.py  recordings.py  telephony.py  template_variables.py  webhooks.py
backend/tests/: conftest.py  test_settings.py
backend/tests/contract/: test_agent_parity_fields.py  test_batch_call.py  test_call_extras.py  test_chat.py  test_chat_agents.py  test_concurrency_and_versions.py  test_conversation_flow.py  test_create_phone_call.py  test_crud_resources.py  test_get_call_and_finalize.py  test_inbound_router.py  test_knowledge_base.py  test_tool_types.py  test_voices.py  test_webhook_delivery.py  test_webhook_events.py  test_webhook_signature.py  test_workspace_settings.py
backend/tests/unit/: test_analysis.py  test_auth_google.py  test_dashboard.py  test_error_cors.py  test_members.py  test_recordings.py  test_security.py
docs/: API_COVERAGE.md  ARCHITECTURE.md  INTERNAL_API.md  MIGRATION.md  RENAME_ARHITEQ.md  RETELL_INTEGRATION_MAP.md  SECURITY.md  UI_INVENTORY.md
docs/superpowers/plans/: 2026-07-12-gemini-only-llm-list.md  2026-07-12-release-process.md  2026-07-12-voice-selection-modal.md  2026-07-14-agent-details-estimates.md  2026-07-15-kb-retell-ui.md  2026-07-19-test-audio.md  2026-07-23-tool-calls-transcript-timeline.md
docs/superpowers/specs/: 2026-07-12-gemini-only-llm-list-design.md  2026-07-12-release-process-design.md  2026-07-12-voice-selection-modal-design.md  2026-07-14-agent-details-estimates-design.md  2026-07-15-kb-retell-ui-design.md  2026-07-19-test-audio-design.md  2026-07-23-tool-calls-transcript-timeline-design.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json
frontend/app/(shell)/: layout.tsx
frontend/components/agents/: AgentsTable.tsx  CreateAgentModal.tsx
frontend/components/alerting/: CreateAlertModal.tsx
frontend/components/analytics/: DonutCard.tsx  StatTile.tsx
frontend/components/calls/: AudioPlayer.tsx  CallDrawer.tsx  Transcript.tsx
frontend/components/editor/: EditorHeader.tsx  MetaRow.tsx  PromptEditor.tsx  TestPanel.tsx
frontend/components/kb/: KbDetail.tsx
frontend/components/qa/: CreateCohortModal.tsx
frontend/components/shell/: AuthGuard.tsx  Logo.tsx
frontend/components/ui/: Badge.tsx  EmptyState.tsx  Modal.tsx  Pagination.tsx  StatusDot.tsx  Tabs.tsx
frontend/lib/: api.ts  mock.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: api.ts  auth.ts  estimates.ts  mock.ts  models.ts  (+5 more)
infra/: README.md
infra/terraform/: .gitignore  apis.tf  backend.tf  cloudsql.tf  dns.tf  gcs.tf  github-deploy.tf  gke.tf  iam.tf  network.tf  outputs.tf  redis.tf  registry.tf  variables.tf  versions.tf
scripts/: import_usan_agents.py  migrate_retell_agent.py  transfer_default_dynamic_variables.py  usan_default_dynamic_variables.json
worker/: .dockerignore  Dockerfile  README.md  config.py  conftest.py  internal_api.py  main.py  metrics.py  pyproject.toml  state.py  tools.py
worker/src/: amd.py  config.py  main.py  tools.py
worker/src/architeq_worker/: __init__.py  config.py  internal_api.py  main.py  state.py  tools.py  variables.py  voices.py
worker/src/arhiteq_worker/: __init__.py  amd.py  config.py  goodbye.py  internal_api.py  main.py  metrics.py  state.py  tools.py  variables.py  voices.py
worker/tests/: conftest.py  test_builtin_tools.py  test_config.py  test_gemini_live_temperature.py  test_goodbye.py  test_state.py  test_tool_annotations.py  test_tools.py  test_tools_options.py  test_variables.py  test_voices.py
(+150 files in other folders)
