[project]
name = "architeq-api"
version = "0.1.0"
description = "Architeq control plane — Retell-compatible voice agent API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "google-genai>=1.0",
    "livekit-api>=1.2.0",
    "prometheus-client>=0.20",
    "alembic>=1.13",
    "google-auth>=2.30",
    "PyJWT>=2.8",
    "google-cloud-storage>=3.12.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
