[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "architeq-worker"
version = "0.1.0"
description = "Architeq voice worker — LiveKit Agents pipeline (Cartesia STT/TTS + Gemini)"
requires-python = ">=3.14"
dependencies = [
    "livekit-agents[cartesia,google]>=1.6.5,<2.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

# Test deps are a PEP 735 group (not an extra) so CI can install them without
# the heavy livekit-agents runtime stack: `uv sync --only-group dev`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[tool.setuptools]
# Flat modules under src/; the Docker image runs `python main.py start` from
# source, so installing the modules is only needed for `pip install .`.
package-dir = { "" = "src" }
py-modules = ["main", "config", "internal_api", "variables", "tools", "amd", "state", "metrics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"
